# boundflow

./: .dockerignore  .env.example  .gitignore  BACKEND-LICENSE.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  buf.gen.yaml  docker-compose.dist.yml  docker-compose.yml  go.mod  go.sum  mkdocs.yml
sdk/python/: LICENSE  environment.yml  pyproject.toml  requirements.txt
sdk/python/boundflow/: __init__.py  _transport.py  anthropic_client.py  control_plane.py  errors.py  langchain_client.py  lifecycle.py  llm.py  policies.py  trace.py  worker.py
sdk/python/boundflow/cli/: __init__.py  __main__.py  _client.py  _output.py
sdk/python/boundflow/examples/: __init__.py  approval_gate.py  hello.py  langchain_adapter.py  langgraph_workflow.py  model_switching.py  runtime_caps.py  self_healing.py
sdk/python/boundflow/v1/: __init__.py  agent_policy_pb2.py  agent_policy_pb2_grpc.py  lifecycle_pb2.py  lifecycle_pb2_grpc.py  operation_pb2.py  (+19 more)
sdk/python/examples/: demo.py  e2e_version_test.py  test_orchestrator.py
sdk/python/tests/: cli_control_plane.py  conftest.py  test_agent_call_timeout.py  test_agent_lifecycle_policy.py  test_agent_metrics_latency.py  test_agent_policy_audit.py  test_approval_audit.py  test_approval_gate.py  test_await_input.py  test_capability_routing.py  test_complete_result.py  test_cooldown_and_resume.py  test_get_workflow.py  test_get_workflow_metrics.py  test_invoke_context.py  test_invoke_mode.py  test_langchain_client.py  test_lifecycle_states.py  test_list_tenants.py  test_list_workflows.py  test_max_tokens_per_call.py  test_metrics_epoch_isolation.py  test_mock_llm.py  test_model_pricing.py  test_otel_sink.py  test_pending_approval.py  test_periodic_workflow.py  test_policy_audit.py  test_policy_getters.py  test_request_info.py  test_resolve_interrupted_workflow.py  test_set_workflow_config.py  test_tool_call_limits.py  test_trace.py  test_workflow_lifecycle_policy.py  test_workflow_runs.py
(+217 files in other folders)
