[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boundflow"
version = "0.3.0"
description = "BoundFlow Python SDK — build governed fleets of agents against a self-hostable control plane."
requires-python = ">=3.10"
# The SDK ships as public source on PyPI under MIT. The backend (shipped as a
# closed binary/image) is licensed separately and is not covered by this.
license = "MIT"
license-files = ["LICENSE"]
keywords = ["agents", "llm", "orchestration", "control-plane", "governance"]

# grpcio>=1.81.0 is a hard floor: the generated worker/operation stubs are
# stamped at 1.81.0 and refuse to import under older grpcio. <3.10 can't get
# 1.81, hence requires-python>=3.10.
dependencies = [
    "grpcio>=1.81.0",
    "protobuf>=6.30,<7",
    "pydantic>=2.0",
    "anthropic>=0.40",
    # The `boundflow` CLI ships with every install.
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
boundflow = "boundflow.cli:main"

[project.optional-dependencies]
# Tooling for regenerating the gRPC stubs and running the integration tests.
dev = [
    "grpcio-tools>=1.81.0",
    "pytest",
    "pytest-asyncio",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
]
# Optional: run BoundFlow agents through any LangChain chat model
# (boundflow.langchain_client.LangChainLlmClient).
langchain = [
    "langchain-core>=0.3",
]
# Optional: export run traces as OpenTelemetry spans (OTelTraceSink). The core
# trace capture has no OTel dependency; install this only if you use that sink.
otel = [
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
]

[tool.setuptools.packages.find]
# Ship the SDK and the generated gRPC stubs; keep tests/examples out of the wheel.
include = ["boundflow*"]
exclude = ["tests*", "examples*"]
